--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -62,50 +62,35 @@ Estimating the number of migrants among the populations is essential for underst
     \textbf {}\\[-4mm]
     \begin{tabular}{llc} \hline
        & & \\
-	$n_{\rm M,1}, n_{\rm M, 2}$			& Sample number of parents in the subpopulation 1 and 2\\ 
+	$n_{\rm P,1}, n_{\rm P, 2}$			& Sample number of parents in the subpopulation 1 and 2\\ 
 		                						& \\
 	$n_{\rm O, 1}, n_{\rm O, 2}$			& Sample number of offspring in the subpopulation 1 and 2\\ 
 		                						& \\
-	$N_{1}, N_{2}$						& Number of parents in the subpopulation 1 and 2 when sampled\\
-									& offspring are born\\
+	$N_{1}, N_{2}$						& Number of parents in the subpopulation 1 and 2 when sampled offspring are born\\
 		                						& \\
 	$M$								& Number of migrants of parents from the subpopulation 1 to the subpopulation 2\\
 		                						& \\
 	$\pi_{\rm PO,1}, \pi_{\rm PO,2}$		& Probability that a randomly selected pair (mother and offspring) \\
-	                							& shares a mother-offspring relationship within the subpopulation 1 and 2\\
+	                							& shares a parent-offspring relationship within the subpopulation 1 and 2\\
 									& \\
-	$\pi_{\rm PO,1}, \pi_{\rm PO,2}$		& Probability that a randomly selected pair (mother and offspring) \\
-	                							& shares a mother-offspring relationship within the subpopulation 1 and 2\\
+	$\pi_{\rm PO, bet}$					& Probability that a randomly selected pair (parent and offspring in the population 1 and 2, respectively) \\
+	                							& shares a parent-offspring relationship between the subpopulation 1 and 2\\
 									& \\
-	$\pi_{\rm MS}$			& Probability that a randomly selected pair (two offspring) \\
-	                				& shares a maternal-sibling relationship\\
-	$N_{\rm b,m}$			& Effective breeding number of mothers in the population\\
-		                			& \\
-	$\phi$		 		& Overdispersion parameter under negative binomial \\
-						&reproduction\\
-		                			& \\
-	$\lambda_i$			& Expected number of surviving offspring of mother $i$\\
-						& at sampling\\
-		                			& \\	
-	$f(\lambda)$			& Frequency of $\lambda$ for all mothers.\\
-		                			& \\	
-	$c$					& Combined effect of deviation from the Poisson \\
-						&($=(1+\phi^{-1})\mathbb{E}[\lambda^2] / \mathbb{E}[\lambda]^2$)\\
-						& \\	
-	$k_i$				& Number of surviving offspring born to mother $i$\\ 
-	                				& \\
-	$H_{\rm MO}$			& Number of mother--offspring pairs observed in samples\\ 
-	                				& \\
-	$H_{\rm MS}$			& Number of maternal-sibling pairs observed in samples\\ 
-	                				& \\
-	$\pi_{\rm MO}$			& Probability that a randomly selected pair (mother and offspring) \\
-	                				& shares a mother-offspring relationship\\
-						& \\
-	$\pi_{\rm MS}$			& Probability that a randomly selected pair (two offspring) \\
-	                				& shares a maternal-sibling relationship\\
-						& \\
-	$b$					& Bias of $\widehat{N_{\rm e,m}/N_{\rm m} }$\\
-					        & & \\	                		
+	$\pi_{\rm HS, bet}$					& Probability that a randomly selected pair (two offspring in the population 1 and 2) \\
+	                							& shares a half-sibling relationship between the subpopulation 1 and 2\\
+					                			& \\
+	$\lambda_{i,1}, \lambda_{i,2}$			& Expected number of surviving offspring of parent $i$ at sampling in the subpopulation 1 and 2\\
+		                						& \\
+	$\lambda_{i, M}$					& Expected number of surviving offspring of migrant $i$ at sampling\\
+		                						& \\
+	$k_{i,1}, k_{i,2}$					& Number of surviving offspring born to parent $i$ in the subpopulation 1 and 2\\ 
+	                							& \\
+	$H_{\rm PO, 1}, H_{\rm PO, 2}$		& Number of parent-offspring pairs observed in samples within the subpopulation 1 and 2\\ 
+	                							& \\
+	$H_{\rm PO, bet}$					& Number of parent-offspring pairs observed in samples between the subpopulation 1 and 2\\ 
+	                							& \\
+	$H_{\rm HS, bet}$					& Number of half-sibling pairs observed in samples between the subpopulation 1 and 2\\ 
+	                							& \\              		
 	\hline
     \end{tabular}
     \label{symbols} 
