--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -76,7 +76,7 @@ Estimating the number of migrants among the populations is essential for underst
 	$\pi_{\rm PO, bet}$					& Probability that a randomly selected pair (parent and offspring in the population 1 and 2, respectively) \\
 	                							& shares a parent-offspring relationship between the subpopulation 1 and 2\\
 									& \\
-	$\pi_{\rm HS, bet}$					& Probability that a randomly selected pair (two offspring in the population 1 and 2) \\
+	$\pi_{\rm HS, bet}$						& Probability that a randomly selected pair (two offspring in the population 1 and 2) \\
 	                							& shares a half-sibling relationship between the subpopulation 1 and 2\\
 					                			& \\
 	$\lambda_{i,1}, \lambda_{i,2}$			& Expected number of surviving offspring of parent $i$ at sampling in the subpopulation 1 and 2\\
@@ -116,6 +116,29 @@ Estimating the number of migrants among the populations is essential for underst
 また，性成熟した個体を親と呼ぶことにする。
 
 \subsection{Basic model}
+
+\begin{align}
+\pi_{\rm HS,bet} &= \frac{2M}{N_{1}} \frac{2M}{N_{2}} \frac{1}{M} \nonumber\\
+&= \frac{4M}{N_{1}N_{2}}
+\label{B1}
+\end{align}
+
+\begin{align}
+\mathbb{E}[H_{\rm HS, bet}] &= \pi_{\rm HS,bet} n_{1} n_{2} \nonumber\\
+&= \frac{ 4n_{1} n_{2} M } { N_{1} N_{2} }
+\label{B2}
+\end{align}
+
+\begin{align}
+\widehat{M} &= \frac{N_{2} H_{\rm obs} } {4n_{1}n_{2}}
+\label{B3}
+\end{align}
+
+
+
+
+
+
 
 まず最初に，最もシンプルなモデルを考える。$t$年にサブ集団１にいる$N_{1,t}$個体の母親を考えよう。$t$年に子供を産んだ後，$N_{1,t}$個体のうち$M_{1\to2}$個体がサブ集団２に移動し，$t+1$年にサブ集団２にいる母個体$N_{2,t+1}$の一部として子供を産むとする。この時，サブ集団１から$t$年に産まれた子供とサブ集団２から$t+1$年に産まれた子供が，母を共有する兄弟(Maternal half Sibling, MHS)である確率$\pi_{\rm b,1\to2}$を考える。どの母親も同じような繁殖ポテンシャルを持つと仮定すると，移動する母親の子供をサブ集団１でサンプルする確率は$M_{1\to2}/N_{1,t}$となる。同様に，移動する母親の子供をサブ集団２においてサンプルする確率は$M_{1\to2}/N_{2,t+1}$である。それぞれでサンプルした子供の母親が同一である確率は$1/M_{1\to2}$であることより，サンプルした２個体がMHSペアとなる確率が以下のように得られる。
 \begin{align}
