--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -188,23 +188,66 @@ Estimating the number of migrants among the populations is essential for underst
 \widehat{N_2} &= \frac{ 2 n_{\rm O, 2} n_{\rm P, 2} + 1 }{\widetilde{H}_{\rm PO, 2} + 1} 
 \label{AP-3}
 \end{align}
-subpop2の親子もわかるはず。migration rateを推定すると考えると、$N_2$を推定値で置き換えて
+subpop2の親子もわかるはず。$N_2$を推定値で置き換えて
 
 \begin{align}
-\widehat{m_4} &=  \frac{ \left(\widetilde{H}_{\rm HS,bet} + \widetilde{H}_{\rm PO,bet}\right) \left(2 n_{\rm O, 2} n_{\rm P, 2} + 1\right)} {2n_{\rm O, 1} \left(2 n_{\rm O, 2} + n_{\rm P, 2}\right) \left(\widetilde{H}_{\rm PO, 2} + 1\right)}
+\widehat{M_4} &=  \frac{ N_{1} \left(\widetilde{H}_{\rm HS,bet} + \widetilde{H}_{\rm PO,bet}\right) \left(2 n_{\rm O, 2} n_{\rm P, 2} + 1\right)} {2n_{\rm O, 1} \left(2 n_{\rm O, 2} + n_{\rm P, 2}\right) \left(\widetilde{H}_{\rm PO, 2} + 1\right)}
 \label{AP-4}
 \end{align}
 
+migration rateを推定すると考えると、
+
 \begin{align}
-\widehat{N_1} &= \frac{ 2 n_{\rm O, 1} n_{\rm P, 1} + 1 }{\widetilde{H}_{\rm PO, 1} + 1} 
+\widehat{m_4} &=  \frac{ \left(\widetilde{H}_{\rm HS,bet} + \widetilde{H}_{\rm PO,bet}\right) \left(2 n_{\rm O, 2} n_{\rm P, 2} + 1\right)} {2n_{\rm O, 1} \left(2 n_{\rm O, 2} + n_{\rm P, 2}\right) \left(\widetilde{H}_{\rm PO, 2} + 1\right)}
 \label{AP-5}
 \end{align}
 
+同様に、$N_1$も推定値で置き換えて
 \begin{align}
-\widehat{M_4} &=  \frac{ \left(\widetilde{H}_{\rm HS,bet} + \widetilde{H}_{\rm PO,bet}\right) \left(2 n_{\rm O, 1} n_{\rm P, 1} + 1\right) \left(2 n_{\rm O, 2} n_{\rm P, 2} + 1\right)} {2n_{\rm O, 1} \left(2 n_{\rm O, 2} + n_{\rm P, 2}\right) \left(\widetilde{H}_{\rm PO, 1} + 1\right) \left(\widetilde{H}_{\rm PO, 2} + 1\right)}
+\widehat{N_1} &= \frac{ 2 n_{\rm O, 1} n_{\rm P, 1} + 1 }{\widetilde{H}_{\rm PO, 1} + 1} 
 \label{AP-6}
 \end{align}
 
+\begin{align}
+\widehat{M_5} &=  \frac{ \left(\widetilde{H}_{\rm HS,bet} + \widetilde{H}_{\rm PO,bet}\right) \left(2 n_{\rm O, 1} n_{\rm P, 1} + 1\right) \left(2 n_{\rm O, 2} n_{\rm P, 2} + 1\right)} {2n_{\rm O, 1} \left(2 n_{\rm O, 2} + n_{\rm P, 2}\right) \left(\widetilde{H}_{\rm PO, 1} + 1\right) \left(\widetilde{H}_{\rm PO, 2} + 1\right)}
+\label{AP-7}
+\end{align}
+
+\renewcommand{\arraystretch}{0.6}
+\begin{table}[tb]
+\begin{center}
+   \caption[]{Table 1: Summary of proposed estimators for input parameters}
+    \textbf {}\\[-0mm]
+    \begin{tabular}{cccccccc} \hline
+       	\\
+	Estimator			& $N_1$ 		& $N_2$ 		& $n_{\rm O, 1}$	& $n_{\rm O, 2}$	& $n_{\rm P, 1}$	& $n_{\rm P, 2}$\\
+	\\
+	\hline
+	\\
+	$\widehat{M_1}$	& given 		& given 		& \checkmark		& \checkmark \\ 
+		                						& \\
+	$\widehat{M_2}$	& given		& given		& \checkmark		& 				&				& \checkmark \\
+		                						& \\
+	$\widehat{M_3}$	& given		& given		& \checkmark		&  \checkmark		&				& \checkmark \\
+		                						& \\
+	$\widehat{M_4}$	& given		& estimated	& \checkmark		&  \checkmark		&				& \checkmark \\
+		                						& \\
+	$\widehat{M_5}$	& estimated	& estimated	& \checkmark		&  \checkmark		& \checkmark		& \checkmark \\
+									& \\
+	$\widehat{m_1}$	& ---			& given		& \checkmark		& \checkmark \\ 
+									& \\
+	$\widehat{m_2}$	& ---			& given		& \checkmark		& 				&				& \checkmark \\
+					                			& \\
+	$\widehat{m_3}$	& ---			& given 		& \checkmark		&  \checkmark		&				& \checkmark \\
+		                						& \\
+	$\widehat{m_4}$	& ---			& estimated	& \checkmark		&  \checkmark		& 				& \checkmark \\
+		                						& \\
+	\hline
+    \end{tabular}
+    \label{symbols} 
+\end{center} 
+\end{table}
+\renewcommand{\arraystretch}{1}
 
 \begin{comment}%%%%%%%%%%%%%%%
 まず最初に，最もシンプルなモデルを考える。$t$年にサブ集団１にいる$N_{1,t}$個体の母親を考えよう。$t$年に子供を産んだ後，$N_{1,t}$個体のうち$M_{1\to2}$個体がサブ集団２に移動し，$t+1$年にサブ集団２にいる母個体$N_{2,t+1}$の一部として子供を産むとする。この時，サブ集団１から$t$年に産まれた子供とサブ集団２から$t+1$年に産まれた子供が，母を共有する兄弟(Maternal half Sibling, MHS)である確率$\pi_{\rm b,1\to2}$を考える。どの母親も同じような繁殖ポテンシャルを持つと仮定すると，移動する母親の子供をサブ集団１でサンプルする確率は$M_{1\to2}/N_{1,t}$となる。同様に，移動する母親の子供をサブ集団２においてサンプルする確率は$M_{1\to2}/N_{2,t+1}$である。それぞれでサンプルした子供の母親が同一である確率は$1/M_{1\to2}$であることより，サンプルした２個体がMHSペアとなる確率が以下のように得られる。
@@ -288,15 +331,6 @@ $n_{1,t}, n_{2,t+1}$は，それぞれサブ集団１（$t$年）でのサンプ
 \end{comment}%%%%%%%%%%%%%%%
 
 \section{Results and Discussion}\label{sec4}
-
-\begin{enumerate}
-  \item $M$ではなく$m$の推定であれば、N2だけ分かれば良い
-  \item 
-  \item サンプルされる当歳魚（０歳）は，必ずサンプルされたサブ集団で産まれる
-  \item 当歳魚かどうかの判断は１００％可能
-  \item サンプル間の近親判別では，１００％の成功率で半兄弟ペアか否かがなされる
-\end{enumerate}
-
 
 
 \section{ACKNOWLEDGEMENTS} 
