modify main text

--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -170,7 +170,7 @@ Estimating the number of migrants among the populations is essential for underst
 
 \section{Applications}\label{sec3}
 
-\subsection{Parent number can be estimated by PO pairs found within a subpopulation}
+\subsection{Efficient use of kinship pairs between subploulations}
 
 \begin{align}
 \widehat{M_3} &= \frac{ N_{1} N_{2} \left(\widetilde{H}_{\rm HS,bet} + \widetilde{H}_{\rm PO,bet}\right) } {2n_{\rm O, 1} \left(2 n_{\rm O, 2} + n_{\rm P, 2}\right) }
@@ -183,6 +183,8 @@ Estimating the number of migrants among the populations is essential for underst
 \end{align}
 
 サンプル数の少なさを補えるかも。
+
+\subsection{Parent number can be estimated by PO pairs found within a subpopulation}
 
 \begin{align}
 \widehat{N_2} &= \frac{ 2 n_{\rm O, 2} n_{\rm P, 2} + 1 }{\widetilde{H}_{\rm PO, 2} + 1} 
@@ -212,6 +214,8 @@ migration rateを推定すると考えると、
 \widehat{M_5} &=  \frac{ \left(\widetilde{H}_{\rm HS,bet} + \widetilde{H}_{\rm PO,bet}\right) \left(2 n_{\rm O, 1} n_{\rm P, 1} + 1\right) \left(2 n_{\rm O, 2} n_{\rm P, 2} + 1\right)} {2n_{\rm O, 1} \left(2 n_{\rm O, 2} + n_{\rm P, 2}\right) \left(\widetilde{H}_{\rm PO, 1} + 1\right) \left(\widetilde{H}_{\rm PO, 2} + 1\right)}
 \label{AP-7}
 \end{align}
+
+\subsection{Individual-based model}
 
 \renewcommand{\arraystretch}{0.6}
 \begin{table}[tb]
