update main text

--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -346,12 +346,9 @@ The author thanks MV Bravington for motivating me to pursue this research topic.
 \section*{APPENDIX A}
 \setcounter{equation}{0}
 
-\section*{Distribution of the number of surviving offspring per mother and its variance}
+\section*{Equation X holds under flexible assumptions for the distribution of surviving offspring number per parent}
 
 \renewcommand{\theequation}{A\arabic{equation}}
-
-
-\subsection{Reproductive variation}
 
 これまでは，母親による産卵数の偏りや，父親による放精成功の偏りは考慮していなかった。しかしながら，多回繁殖する魚類の場合，体サイズによって繁殖成功度は大きく変化すること，および体サイズの分布には偏りが存在することから，上記のシステマチックな偏りを考慮する必要があるだろう。例えば，集団に１個体の巨大魚（メス）がいて，その産卵数が他の個体よりも圧倒的に大きい場合，サンプルされる子供の母親はかなりの確率でその巨大魚になるだろう。
 
