--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -81,11 +81,11 @@ The main symbols used in the current paper are summarized in Table \ref{symbols}
 	$\pi_{\rm HS, bet}$					& Probability that a randomly selected pair (two offspring in the population 1 and 2) \\
 	                							& shares a half-sibling relationship between the subpopulation 1 and 2\\
 					                			& \\
-	$\lambda_{i,1}, \lambda_{i,2}$			& Expected number of surviving offspring of parent $i$ at sampling in the subpopulation 1 and 2\\
+	$\lambda_{i,1}, \lambda_{j,2}$			& Expected number of surviving offspring of parent $i$ and $j$ at sampling in the subpopulation 1 and 2\\
 		                						& \\
 	$\lambda_{i, M}$					& Expected number of surviving offspring of migrant $i$ at sampling\\
 		                						& \\
-	$k_{i,1}, k_{i,2}$					& Number of surviving offspring born to parent $i$ in the subpopulation 1 and 2\\ 
+	$k_{i,1}, k_{j,2}$					& Number of surviving offspring born to parent $i$ and $j$ in the subpopulation 1 and 2\\ 
 	                							& \\
 	$H_{\rm PO, 1}, H_{\rm PO, 2}$		& Number of parent-offspring pairs observed in samples within the subpopulation 1 and 2\\ 
 	                							& \\
@@ -184,7 +184,7 @@ n_{\rm O, 1} n_{\rm P, 2} &> \frac{ N_{2} } { 2m }
 
 \section{Applications}\label{sec3}
 
-\subsection{Efficient use of kinship pairs between subploulations}
+\subsection{Efficient use of kinship pairs found between subpopulations}
 
 \begin{align}
 \widehat{M_3} &= \frac{ N_{1} N_{2} \left(\widetilde{H}_{\rm HS,bet} + \widetilde{H}_{\rm PO,bet}\right) } {2n_{\rm O, 1} \left(2 n_{\rm O, 2} + n_{\rm P, 2}\right) }
