add text in Theory

--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -22,7 +22,7 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 
 \begin{document}
 
-\title{Estimating migrant rates using kinship pairs \protect\thanks{Running head line: Estimating migrant rates using kinship pairs}}
+\title{Estimating migrantation rates using kinship pairs \protect\thanks{Running head line: Estimating migrantation rates using kinship pairs}}
 
 \author[1]{Tetsuya Akita}
 \authormark{Akita}
@@ -112,9 +112,13 @@ The main symbols used in the current paper are summarized in Table \ref{symbols}
 \end{table}
 \renewcommand{\arraystretch}{1}
 
-\subsection{Assumptions}
+\subsection{Hypothetical population and sampling scheme}
 
-この章では，全てに共通するモデリングの仮定を述べた後，シンプルなモデルから徐々に複雑なモデルへと移行する。具体的には，最初にシンプルなモデルについて記述して，
+Suppose that we have a set of two populations labelled 1 and 2. 
+
+
+and there are migrant individuals between the two subpopulations. also no population subdivision or spatial struc- ture. In this study, a mature female is called a mother even if she does not produce offspring. For mathematical tractability, we assume that only one spawning ground exists in which the mothers remain for the entire spawning season. Following (Akita, 2020), our modeling frame- work employs two types of overdispersed reproduction: parental and nonparental variations. Thus, the former indicates a variation caused by the mother's covariates, such as age, weight, and residence time on the spawning ground, while the latter indicates a variation caused by nonrandom stochastic events during a series of reproductive episodes, which are independent of the mother's covariates, such as family-correlated survivorship or the mating behavior effects (e.g., competition for males/females and correlation between mating op- portunities of the mother and the number of her offspring). Figure 1 illustrates a schematic diagram of the effects of parental and non- parental variations exemplified by age-dependent reproduction and family-correlated survival on kinship relationships in a population. Detailed definitions of parental and nonparental variations are stated in (Akita, 2020). Appendix 1 provides the theoretical foundation of both parental and nonparental variations in reproduction.
+
 \begin{itemize}
   \item 移動が双方向
   \item 性比1:1およびランダム交配を仮定して両性を考慮
